Test_For_Tests/results/pabot_results/1/robot_stdout.out
==============================================================================
Suites                                                                        
==============================================================================
Suites.02 Test Two copy 2                                                     
==============================================================================
Test Conversion Monnaie XE                                              
  Traceback (most recent call last):
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    File  C:\Users\khaba\OneDrive\Bureau\PY\Test-Automation-managements\Test_For_Tests\02_Test_Two copy 2.robot:14
    T:  Test Conversion Monnaie XE    
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    File  C:\Users\khaba\OneDrive\Bureau\PY\Test-Automation-managements\Test_For_Tests\02_Test_Two copy 2.robot:17
      Wait Until Element Is Visible    ${AMOUNT_FIELD}    timeout=5s
      |  ${AMOUNT_FIELD} = name=Amount (str)
______________________________________________________________________________
| FAIL |
NoSuchWindowException: Message: no such window: target window already closed
from unknown error: web view not found
  (Session info: chrome=133.0.6943.141)
Stacktrace:
	GetHandleVerifier [0x00007FF79562C6A5+28789]
	(No symbol) [0x00007FF795595B20]
	(No symbol) [0x00007FF795428F9A]
	(No symbol) [0x00007FF795401563]
	(No symbol) [0x00007FF7954AEF1E]
	(No symbol) [0x00007FF7954CF0D2]
	(No symbol) [0x00007FF7954A7103]
	(No symbol) [0x00007FF79546FFC0]
	(No symbol) [0x00007FF795471273]
	GetHandleVerifier [0x00007FF795971AED+3458237]
	GetHandleVerifier [0x00007FF79598829C+3550316]
	GetHandleVerifier [0x00007FF79597DB9D+3507565]
	GetHandleVerifier [0x00007FF7956F2C6A+841274]
	(No symbol) [0x00007FF7955A09EF]
	(No symbol) [0x00007FF79559CB34]
	(No symbol) [0x00007FF79559CCD6]
	(No symbol) [0x00007FF79558C119]
	BaseThreadInitThunk [0x00007FFA44D2E8D7+23]
	RtlUserThreadStart [0x00007FFA460FBF2C+44]
------------------------------------------------------------------------------
Suites.02 Test Two copy 2                                             | FAIL |
1 test, 0 passed, 1 failed
==============================================================================
Suites                                                                | FAIL |
1 test, 0 passed, 1 failed
==============================================================================
Output:  C:\Users\khaba\OneDrive\Bureau\PY\Test-Automation-managements\Test_For_Tests\results\pabot_results\1\output.xml
